; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_dtype_transfer.c__strided_to_strided_move_references.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_dtype_transfer.c__strided_to_strided_move_references.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"dec dst ref\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"move src ref\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i8*, i64, i64, i64, i32*)* @_strided_to_strided_move_references to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_strided_to_strided_move_references(i8* %0, i64 %1, i8* %2, i64 %3, i64 %4, i64 %5, i32* %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i8* %2, i8** %10, align 8
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  store i32* %6, i32** %14, align 8
  store i32* null, i32** %15, align 8
  store i32* null, i32** %16, align 8
  br label %17

17:                                               ; preds = %20, %7
  %18 = load i64, i64* %12, align 8
  %19 = icmp sgt i64 %18, 0
  br i1 %19, label %20, label %47

20:                                               ; preds = %17
  %21 = bitcast i32** %15 to i8*
  %22 = load i8*, i8** %10, align 8
  %23 = call i32 @NPY_COPY_PYOBJECT_PTR(i8* %21, i8* %22)
  %24 = bitcast i32** %16 to i8*
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @NPY_COPY_PYOBJECT_PTR(i8* %24, i8* %25)
  %27 = load i32*, i32** %16, align 8
  %28 = call i32 @NPY_DT_DBG_REFTRACE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %27)
  %29 = load i32*, i32** %16, align 8
  %30 = call i32 @Py_XDECREF(i32* %29)
  %31 = load i32*, i32** %15, align 8
  %32 = call i32 @NPY_DT_DBG_REFTRACE(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32* %31)
  %33 = load i8*, i8** %8, align 8
  %34 = bitcast i32** %15 to i8*
  %35 = call i32 @NPY_COPY_PYOBJECT_PTR(i8* %33, i8* %34)
  store i32* null, i32** %15, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = bitcast i32** %15 to i8*
  %38 = call i32 @NPY_COPY_PYOBJECT_PTR(i8* %36, i8* %37)
  %39 = load i64, i64* %11, align 8
  %40 = load i8*, i8** %10, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 %39
  store i8* %41, i8** %10, align 8
  %42 = load i64, i64* %9, align 8
  %43 = load i8*, i8** %8, align 8
  %44 = getelementptr inbounds i8, i8* %43, i64 %42
  store i8* %44, i8** %8, align 8
  %45 = load i64, i64* %12, align 8
  %46 = add nsw i64 %45, -1
  store i64 %46, i64* %12, align 8
  br label %17

47:                                               ; preds = %17
  ret void
}

declare dso_local i32 @NPY_COPY_PYOBJECT_PTR(i8*, i8*) #1

declare dso_local i32 @NPY_DT_DBG_REFTRACE(i8*, i32*) #1

declare dso_local i32 @Py_XDECREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
